--- a/sass/_layout/_header.scss
+++ b/sass/_layout/_header.scss
@@ -230,12 +230,13 @@ header {
                 }
                 @media (max-width: 767px) {
                     display: none;
-                    position: absolute;
+                    position: fixed;
                     top: 0;
                     background: #FFF;
                     width: 100%;
                     height: 100%;
                     margin-top: 0 !important;
+                    overflow-y: scroll;
                     z-index: 999;
                     > span {
                         display: block;
